--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link href="css/styles.css" rel="stylesheet">
-    <link href="css/styles.css" rel="stylesheet">
     <title>Personal Page</title>
+    <link href="css/index.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <!-- CSS only -->
@@ -37,7 +37,7 @@
             </div>
     </header>
     <main class="container min-vw-70">
-        <div class="about min-vw-70">
+        <div class="about min-vw-70 overflow-auto">
             <p>
                 This is Radman Avakoli, currently a third year student specializing in computer science (with software engineering option) at the University of British Columbia.
             </p>
@@ -56,14 +56,11 @@
         </div>
     </main>
     <footer class="container"> 
-        
-        <a href="https://www.linkedin.com/in/radman-avakoli"><i class="bi bi-linkedin"></i></a>
-        <a href="mailto: radmantvk@gmail.com"><i class="bi bi-envelope"></i></a>
-        <a href="https://www.instagram.com/_radman_t/"><i class="bi bi-instagram"></i></a>
-        <a href="tel: 6047043341">(604) 704-3341</a>
-    </footer>
-    
+        <a class="media-logo" href="https://www.linkedin.com/in/radman-avakoli"><i class="bi bi-linkedin"></i></a>
+        <a class="media-logo" href="mailto: radmantvk@gmail.com"><i class="bi bi-envelope"></i></a>
+        <a class="media-logo" href="https://www.instagram.com/_radman_t/"><i class="bi bi-instagram"></i></a>
+        <a class="media-logo text-decoration-none" href="tel:6047043341">(604) 704-3341</a>
+    </footer> 
     <script src="js/script.js"></script>
-    </body>
-   
+</body>   
 </html>
